Fixed race condition when displaying alarms, upgraded dependencies, use tangerine.